--- a/src/main/resources/templates/main.mustache
+++ b/src/main/resources/templates/main.mustache
@@ -2,12 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Main</title>
+    <title> </title>
 </head>
 <body>
     <div>
-        {{some}}
+        <form method="post">
+            <input type = "text" name="text" placeholder = "введите сообщение" />
+            <input type = "text" name="tag"  placeholder = "Тэг " />
+            <button type = "submit">Добавить</button>
+        </form>
     </div>
+    <div>Список сообщений</div>
+    {{#messages}}
+    <div>
+        <b>{{id}}</b>
+        <span>{{text}}</span>
+        <i>{{tag}}</i>
+    </div>
+    {{/messages}}
 
 </body>
 </html>
