--- a/src/main/resources/templates/main.mustache
+++ b/src/main/resources/templates/main.mustache
@@ -1,18 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title> </title>
-</head>
+<html >
 <body>
     <div>
         <form method="post">
             <input type = "text" name="text" placeholder = "введите сообщение" />
-            <input type = "text" name="tag"  placeholder = "Тэг " />
+            <input type = "text" name="tag"  placeholder = "Тэг" />
             <button type = "submit">Добавить</button>
         </form>
     </div>
-    <div>Список сообщений</div>
+    <div>Список сообщений:</div>
+    <form method = "post" action = "filter">
+        <input type = "name" name = "filter">
+        <button type = "submit">Найти</button>
+    </form>
     {{#messages}}
     <div>
         <b>{{id}}</b>
@@ -20,6 +19,5 @@
         <i>{{tag}}</i>
     </div>
     {{/messages}}
-
 </body>
 </html>
